fix on safari ios

--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,7 @@ html,body,#root{
   height:100%;          /* anchor the flexbox to “full page” */
   overscroll-behavior:none;  /* prevents rubber-band on iOS    */
 }
-html, body, #root {
-  height: calc(100vh + 1px); /* give Chrome a 1px buffer */
-}
+
 
 .bg-ripple {
   position: fixed;
